# winit-app-rs

./: Cargo.toml  README.md
.github/workflows/: cargo-validate.yaml  first-runner.yaml  static-deploy.yaml
docs/: all.html  crates.js  enum.WinitAppError.html  help.html  index.html  settings.html  sidebar-items.js  src-files.js  type.WinitAppResult.html
docs/app_listener/: enum.AppWindowEvent.html  index.html
docs/application/: index.html  struct.Application.html
docs/search.index/: 02128c13ff72.js  125fc8f1c8a1.js  5013f6191fd7.js  75f8130134ec.js  769771bd3404.js  7957a63d2c4b.js  root.js
docs/search.index/crateNames/: 590318f75b54.js
docs/search.index/desc/: bb935a379edf.js
docs/search.index/entry/: 5dc235f3883f.js
docs/search.index/function/: 45f29ebd043c.js
docs/search.index/generic_inverted_index/: 78d4357480f0.js
docs/search.index/name/: 6a7092eee5da.js
docs/search.index/normalizedName/: ba6b40e25e60.js
docs/search.index/path/: f8e6d2e411cf.js
docs/search.index/type/: 89b8d330bf41.js
docs/src/winit_app/: app_listener.rs.html  application.rs.html  lib.rs.html
docs/trait.impl/core/convert/: trait.From.js
docs/winit_app/: all.html  enum.WinitAppError.html  index.html  type.WinitAppResult.html
docs/winit_app/app_listener/: enum.AppWindowEvent.html  index.html  sidebar-items.js
docs/winit_app/application/: index.html  sidebar-items.js  struct.Application.html
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml  LICENSE  README.md
lib/src/: app_listener.rs  application.rs  lib.rs
(+12 files in other folders)
