[package]
name = "winit_app"
version = "0.31.0"
edition = "2024"
license = "MIT"
keywords = ["rust-windowing", "graphics", "winit"]
description = "A starter package to get started with winit windowing library"
repository = "https://github.com/opal-ui/winit-app-rs"
readme = "README.md"
homepage = "https://opal-ui.github.io/winit-app-rs/"
categories = ["command-line-utilities", "rust-windowing-tools"]

[lib]
name="winit_app"

[dependencies]
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
thiserror = "2.0.17"
log="0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 